Fix playlist break on not rendered button. Add warnings and instructions to favorite tracks page and playlist page

--- a/public/components/bigComponents/Playlist/library.less
+++ b/public/components/bigComponents/Playlist/library.less
@@ -149,3 +149,19 @@
 
   padding: min(2vh, 2vw);
 }
+
+.empty-warning-artist {
+    .smallText();
+  display: flex;
+  flex-direction: row;
+
+  width: fit-content;
+  max-width: 100%;
+
+  padding-top: 0.3em;
+  gap: 0.4rem
+}
+
+.warning-placement {
+
+}
